# mysql-test-charm

./: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: check_libs.yaml  ci.yaml  release.yaml
src/: charm.py  connector.py  continuous_writes.py
src/relations/: legacy_mysql.py
